[package]
name = "rtun"
version = "0.1.0"
edition = "2024"
description = "A fast and simple local tunneling tool, written in Rust."
authors = ["Sirisak Chantanate <maicmi@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"